Fixed bottom scroll bar spacing issue
Spacing on body { margin: 15px;} needed to be applied to get rid of it

--- a/css/styles.css
+++ b/css/styles.css
@@ -2,6 +2,8 @@
   body{
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
+    /* margin spacing below is to get rid of strange spacing that causes bottom scroll bar when removed */
+    margin: 15px !important;
   }
   a {
     color:black;
